--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-vis": "^1.11.7"
+    "react-vis": "^1.11.7",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
